--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "xtask"
 version = "0.1.0"
+license.workspace = true
 edition.workspace = true
 publish = false
 
@@ -8,7 +9,11 @@ publish = false
 anyhow.workspace = true
 # Current contents filed as a PR here:
 # <https://github.com/rukai/cargo-run-wasm/pull/37>
-cargo-run-wasm = { version = "0.3.2", git = "https://github.com/ErichDonGubler/cargo-run-wasm", branch = "expose-args" }
 env_logger.workspace = true
 log.workspace = true
 pico-args.workspace = true
+
+[dependencies.cargo-run-wasm]
+version = "0.3.2"
+git = "https://github.com/ErichDonGubler/cargo-run-wasm"
+rev = "e9b502e50eaccb0f360deb36ccd0f42c6c56f9ba"
